Deps: parent POM 55 and others (#269)
Changes:
* parent POM 55
* wrapper to 3.9.16
* applied Modernizer rules
* updated dependencies (minors)